--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ window['_fs_namespace'] = 'FS';
     </div>
   </div>
   <div class="hero-section home-page-hero">
-    <h1 class="home-page-heading" data-ix="hero-text">Get your sessions discovered</h1>
+    <h1 class="home-page-heading" data-ix="hero-text">Get your sessions discovered!</h1>
     <h1 class="hero-subtitle">Your gateway to the most popular physical activity finders on the web</h1><a class="hero_button w-button" href="https://app.opensessions.io/">I am an activity organiser</a></div>
   <div class="hidden home-page section top-section">
     <div class="section-1-container w-container">
